refafctored Portfolio so that inital render of projects has placeholders to take up space to prevent content shift while projects are fetched

--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -7,45 +7,11 @@
 		width: 100%;
 	}
 
-	&__projects-inner {
-		@include portfolioContainer;
-		opacity: 0;
-		margin-inline: auto;
-
-		&.show {
-			opacity: 1;
-			transition: var(--placeholder-transition);
-		}
-	}
-
-	&__projects {
-		position: relative;
-		min-width: 100%;
-
-		&.isLoading {
-			min-height: 100vh;
-		}
-	}
-
-	&__editProjectOrder {
-		@include linkButton;
-		@include generalOpacityTransition;
-		height: 2rem;
-		opacity: 0;
-
-		&.show {
-			opacity: 1;
-		}
-
-		&.disabled {
-			@include buttonDisabled;
-		}
-	}
-
 	&__inner {
 		align-items: center;
 		display: flex;
 		flex-direction: column;
+		height: 100%;
 		justify-content: center;
 		padding-bottom: 4rem;
 		padding-inline: 1rem;
@@ -59,32 +25,7 @@
 	}
 
 	&__header {
-		position: relative;
 		margin-bottom: 1rem;
-	}
-
-	&__editModeButton {
-		width: 3rem;
-		height: 3rem;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		position: absolute;
-		right: 3rem;
-		top: 1.5rem;
-		border: none;
-		outline: none;
-		background: none;
-		cursor: pointer;
-
-		&.hide {
-			display: none;
-		}
-	}
-
-	&__editMode-icon {
-		height: 2rem;
-		width: 2rem;
 	}
 
 	&__heading {
@@ -102,6 +43,52 @@
 		}
 	}
 
+	&__editModeButton {
+		align-items: center;
+		background: none;
+		border: none;
+		color: var(--text-color);
+		cursor: pointer;
+		display: flex;
+		height: 1.75rem;
+		justify-content: center;
+		position: absolute;
+		right: -2.25rem;
+		top: 0;
+		outline: none;
+		width: 1.75rem;
+
+		@media (min-width: $smallTablet) {
+			height: 1.9rem;
+			right: -2.5rem;
+			width: 1.9rem;
+		}
+
+		@media (min-width: $smallTablet) {
+			right: -2.5rem;
+		}
+
+		@media (min-width: $tablet) {
+			right: -2.7rem;
+		}
+
+		@media (min-width: $desktop) {
+			right: -3rem;
+			top: -0.25rem;
+			height: 2.25rem;
+			width: 2.25rem;
+		}
+
+		&.hide {
+			display: none;
+		}
+	}
+
+	&__editMode-icon {
+		height: 2rem;
+		width: 2rem;
+	}
+
 	&__sub-heading {
 		font-size: 1.5rem;
 		margin-bottom: 2rem;
@@ -113,52 +100,58 @@
 		margin-bottom: 0.5rem;
 	}
 
-	&__editProjectOrder {
+	&__addOrEditProjectOrder {
 		@include linkButton;
 		@include generalOpacityTransition;
 		height: 2rem;
-		opacity: 0;
-
-		&.show {
-			opacity: 1;
-		}
+		// opacity: 0;
+		opacity: 1;
 
 		&.disabled {
 			@include buttonDisabled;
 		}
 	}
 
-	&__projects-inner {
-		@include portfolioContainer;
-		opacity: 0;
-
-		&.show {
-			opacity: 1;
-			transition: var(--placeholder-transition);
-		}
+	&__addProjectOrder {
+		@include linkButton;
+		@include generalOpacityTransition;
+		height: 2rem;
 	}
 
-	&__project-placeholders {
-		@include portfolioContainer;
+	&__projects {
+		position: relative;
+		min-width: 100%;
 		height: 100%;
+	}
+
+	&__initialProjectPlaceholders {
+		@include portfolioContainer;
 		position: absolute;
-		top: 0;
+		width: 100%;
 		left: 50%;
 		transform: translateX(-50%);
-		border: 2px solid green;
-		width: 100%;
+
+		// & > * {
+		// 	border: 1px dashed #333;
+		// 	background: yellow;
+		// }
 
 		&.hide {
 			display: none;
 		}
 	}
 
-	&__project-placeholder {
-		aspect-ratio: 16/9;
-		background: var(--placeholder-color);
-		border-radius: var(--border-radius);
-		max-width: 100%;
-		overflow: hidden;
+	&__projects-inner {
+		@include portfolioContainer;
+		opacity: 0;
+		// opacity: 1;
+		margin-inline: auto;
+		height: 100%;
+
+		&.show {
+			opacity: 1;
+			transition: var(--placeholder-transition);
+		}
 	}
 
 	&__buttons {
@@ -169,6 +162,7 @@
 		justify-content: center;
 		margin-top: 2rem;
 		gap: 2rem;
+		border: 2px solid red;
 
 		@media (min-width: $tablet) {
 			flex-direction: row;
